Quick fix for projects page on mobile

--- a/personal-website/projects/projects.css
+++ b/personal-website/projects/projects.css
@@ -1,7 +1,6 @@
 main {
     margin: 0 1rem;
     padding-top: 8rem;
-    width: calc(100% - 2rem);
     color: whitesmoke;
   }
 
